# bookcovergenerator

./: .gitignore  README.md  config.yaml  pyproject.toml  template.html  test.csv
bookimager/: __init__.py  logger.py  main.py
bookimager/discord_func/: view_gen.py
bookimager/models/: book.py
bookimager/service/: csvcontroller.py  csvimagener.py  dalleinteg.py  drawer.py  drawertwo.py  gener_integration.py  imagedown.py  imagegener.py  parser.py  service.py
