[project]
name = "bookimager"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ReRubis", email = "slesarenkod@gmail.com"},
]
dependencies = [
    "pyyaml>=6.0.1",
    "cairosvg>=2.7.1",
    "openai>=1.12.0",
    "requests>=2.31.0",
    "discord>=2.3.2",
    "aiofiles>=23.2.1",
    "asyncio>=3.4.3",
    "aiohttp>=3.9.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
